--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Siddharth Singh | Portfolio</title>
-    <meta name="description" content="Siddharth Singh's personal portfolio showcasing projects, skills, and experience in software development.">
+    <title>Siddharth Sharma's | Portfolio</title>
+    <meta name="description" content="Siddharth Sharma's personal portfolio showcasing projects, skills, and experience in software development.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
